fix: Call Tree expand overflow
The end of the row would overflow becoming hidden behind the scrollbar.

--- a/log-viewer/resources/css/TreeView.css
+++ b/log-viewer/resources/css/TreeView.css
@@ -85,9 +85,16 @@
   display: none;
 }
 #calltreeContainer {
+  min-height: 0;
+}
+
+#calltreeTable {
   height: 100%;
-  display: contents;
-  max-height: 100%;
-  box-sizing: border-box;
-  width: 100%;
+}
+
+#treeViewContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 0;
 }
